--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ google-cloud-vision
 python-dotenv                                                                                                                                                      
 requests                                                                                                                                                                                   
 flask-cors
+Gunicorn
